完成攻击方法源代码读取功能，完善结果分析的内容，快速构建部分基本完成还需部分修改，完成主题颜色调整

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background-color: rgba(24, 144, 255, 0.3);
+      background-color: #829083;
       background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
     }
   </style>
