--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     }
 
     ::-webkit-scrollbar-thumb {
-      background-color: #829083;
+      background-color: #577f49;
       background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
     }
   </style>
